[gd_scene load_steps=10 format=3 uid="uid://dc2og26ue2q4m"]

[ext_resource type="Script" uid="uid://bdt0rx2suqtc6" path="res://scripts/oven.gd" id="1_dtlb7"]
[ext_resource type="ArrayMesh" uid="uid://ysqecgm4y6bu" path="res://Assets/Models/cgaxis_models_116_06_obj_microwave.obj" id="1_jesd3"]
[ext_resource type="AudioStream" uid="uid://cxr3n44iltkkt" path="res://Assets/Audios/microwave-oven-01-410907.mp3" id="3_v8esg"]
[ext_resource type="AudioStream" uid="uid://pr1nvwx25ng8" path="res://Assets/Audios/oven-timer-complete-43537.mp3" id="4_fmqta"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dtlb7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jesd3"]
transparency = 1
albedo_color = Color(1, 1, 0, 0.847059)
emission_enabled = true
emission = Color(1, 1, 0, 1)
emission_energy_multiplier = 0.04
refraction_enabled = true
refraction_scale = 0.2

[sub_resource type="PlaneMesh" id="PlaneMesh_v8esg"]
material = SubResource("StandardMaterial3D_jesd3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v8esg"]
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jesd3"]
material = SubResource("StandardMaterial3D_v8esg")

[node name="Oven" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.440262)
script = ExtResource("1_dtlb7")

[node name="model" type="MeshInstance3D" parent="."]
transform = Transform3D(0.0900434, 0, 0, 0, 0.0900434, 0, 0, 0, 0.0900434, 0, 0, -1.83927)
mesh = ExtResource("1_jesd3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(4.45759, 0, 0, 0, 4.45759, 0, 0, 0, 4.45759, 0, 0, -0.616837)
shape = SubResource("BoxShape3D_dtlb7")

[node name="emmision" type="MeshInstance3D" parent="."]
transform = Transform3D(0.506345, -0.000973159, -1.40077e-05, 2.03364e-10, 0.0106693, -0.256017, 0.00113118, 0.435626, 0.00627034, -0.159378, 0.363434, 0.117243)
visible = false
mesh = SubResource("PlaneMesh_v8esg")

[node name="button" type="MeshInstance3D" parent="."]
transform = Transform3D(0.145137, 0, 0, 0, -0.00460209, -0.130017, 0, 0.113349, -0.00527883, 0.471043, 0.571628, 0.081548)
visible = false
mesh = SubResource("CapsuleMesh_jesd3")

[node name="ovensound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0838178, 0.294803, 0.1807)
stream = ExtResource("3_v8esg")

[node name="oventimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="Oven-timer-complete" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fmqta")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="oventimer" to="." method="_on_oventimer_timeout"]
